[project]
name = "python-scripts"
version = "0.1.0"
description = "Pytyon scripts for BI related work."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "pandasql>=0.7.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "notebook>=7.3.3",
    "uv>=0.6.9",
]
